k8/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-ingress
  namespace: url-shortener
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: url-shortener.com
    http:
      paths:
      - path: /api/(.*)
        pathType: Prefix
        backend:
          service:
            name: url-shortener-backend-service
            port:
              number: 5000
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: url-shortener-frontend-service
            port:
              number: 80
